--- a/app/src/main/res/menu/toolbarmenu.xml
+++ b/app/src/main/res/menu/toolbarmenu.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/toggle_mode"
-        android:icon="@drawable/ic_whitelist"
-        android:title="@string/Whitelist"
-        app:showAsAction="always" />
+    <item
+        android:id="@+id/showMore"
+        android:icon="@drawable/ic_more"
+        android:title=""
+        app:showAsAction="always">
+        <menu>
+            <item
+                android:id="@+id/toggle_enabled"
+                android:icon="@drawable/ic_disabled"
+                android:title="@string/Disabled"
+                app:showAsAction="ifRoom" />
+            <item
+                android:id="@+id/toggle_mode"
+                android:icon="@drawable/ic_mode"
+                android:title="@string/Whitelist"
+                app:showAsAction="ifRoom" />
+        </menu>
+    </item>
 </menu>
