feat: Add an options fragment instead of using the toolbar items for settings firewall mode

--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -8,4 +8,8 @@
         android:id="@+id/fragment_logs"
         android:title="@string/Logs"
         android:icon="@drawable/ic_logs"/>
+    <item
+        android:id="@+id/fragment_options"
+        android:title="@string/Options"
+        android:icon="@drawable/ic_options"/>
 </menu>
